--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -41,6 +41,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script> -->
+  <script src="lib/signalr.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/signalr@2.4.1/jquery.signalR.min.js"></script>
 </body>
 
 </html>
